--- a/src/main/resources/static/css/profileStyle.css
+++ b/src/main/resources/static/css/profileStyle.css
@@ -72,3 +72,47 @@ h2 {
 .delete-btn:hover {
     background: #ff7675;
 }
+
+.back-btn {
+    display: block;
+    margin-top: 20px;
+    padding: 12px;
+    text-align: center;
+    background: #636e72;
+    color: white;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 15px;
+    transition: 0.2s;
+}
+
+.back-btn:hover {
+    background: #b2bec3;
+}
+
+.error, .success {
+    padding: 12px 16px;
+    border-radius: 20px;
+    font-size: 15px;
+    margin-bottom: 20px;
+    color: white;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.error {
+    background-color: #e53935;
+    color: white;
+}
+
+.success{
+    background-color: #43a047;
+    color: white;
+}
+
+
