--- a/src/main/resources/static/css/taskStyle.css
+++ b/src/main/resources/static/css/taskStyle.css
@@ -33,26 +33,63 @@ h1 {
 
 .task-filter-form {
     display: flex;
-    gap: 10px;
-    margin: 15px 0;
+    flex-direction: column;
+    gap: 12px;
+    margin: 15px 0 25px;
 }
 
-.task-filter-form input, .task-filter-form select {
-    flex: 1;
+.task-filter-form input {
     padding: 12px 14px;
     border: 1px solid #dfe6e9;
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 15px;
     background-color: #fdfdfd;
-    box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
     transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.task-filter-form input:focus, .task-filter-form select:focus {
+.task-filter-form input:focus {
     outline: none;
     border-color: #74b9ff;
-    box-shadow: 0 0 0 3px rgba(116,185,255,0.3);
+    box-shadow: 0 0 0 3px rgba(116, 185, 255, 0.25);
 }
+
+.task-tabs {
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+}
+
+.task-tabs button {
+    border: none;
+    background: #ecf0f1;
+    color: #2d3436;
+    border-radius: 10px;
+    padding: 10px 18px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.25s ease;
+}
+
+.task-tabs button:hover{
+    background: #dfe6e9;
+    outline: none;
+}
+
+.task-tabs button.active:hover {
+    background-color: #0984e3;
+    color: #fff;
+    box-shadow: 0 3px 10px rgba(9, 132, 227, 0.4);
+}
+
+
+.task-tabs .active{
+    background: #0984e3;
+    color: #fff;
+    box-shadow: 0 3px 10px rgba(9, 132, 227, 0.4);
+}
+
 
 .task-list {
     list-style: none;
@@ -97,7 +134,7 @@ h1 {
     color: #252525;
 }
 
-.task-deadline, .task-completedAt {
+.task-deadline, .task-create {
     font-size: 0.9em;
     color: #252525;
 }
@@ -142,15 +179,6 @@ h1 {
     background: #ff7675;
 }
 
-.btn-filter {
-    background: #0984e3;
-    color: white;
-}
-
-.btn-filter:hover {
-    background: #74b9ff;
-}
-
 .btn-create-task {
     background: #00b894;
     color: white;
@@ -177,6 +205,15 @@ h1 {
 }
 
 .btn-delete:hover {
+    background: #fab1a0;
+}
+
+.btn-edit{
+    background: #fdcb6e;
+    color: #333;
+}
+
+.btn-edit:hover {
     background: #fab1a0;
 }
 
@@ -256,7 +293,3 @@ h1 {
     margin-bottom: 12px;
     font-size: 14px;
 }
-
-
-
-
