--- a/src/main/resources/static/css/taskStyle.css
+++ b/src/main/resources/static/css/taskStyle.css
@@ -121,7 +121,7 @@ h1 {
     background: #dfe6e9;
 }
 
-.task-tabs .active {
+.task-tabs button.active {
     background: linear-gradient(135deg, #0984e3, #74b9ff);
     color: #fff;
     box-shadow: 0 4px 12px rgba(9, 132, 227, 0.3);
@@ -152,13 +152,20 @@ h1 {
     box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
 }
 
-.task-item.completed {
-    background: #e8f8e8;
-    text-decoration: line-through;
+.task-item.completed  {
     opacity: 0.8;
 }
 
+.task-item.completed .task-title {
+    text-decoration: line-through;
+}
+
+.task-item.completed .task-description {
+    text-decoration: line-through;
+}
+
 .task-content {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -183,6 +190,7 @@ h1 {
 .task-actions {
     display: flex;
     gap: 6px;
+    flex-shrink: 0;
 }
 
 .btn-edit {
@@ -277,3 +285,31 @@ h1 {
     margin-top: -8px;
     margin-bottom: 10px;
 }
+
+/* Статус задачи */
+.task-status {
+    display: inline-block;
+    padding: 4px 12px;
+    border-radius: 15px;
+    font-size: 13px;
+    font-weight: 600;
+    margin-top: 5px;
+    width: fit-content;
+}
+
+.status-active {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeaa7;
+}
+
+.status-completed {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+
+
+
+
