--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,10 @@
         Неверный логин или пароль!
     </div>
 
+    <div class="error" th:if="${param.disabled}">
+        Извините, ваш аккаунт заблокирован.
+    </div>
+
     <div class="logout" th:if="${param.logout}">
         Вы успешно вышли из аккаунта.
     </div>
