--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,7 +13,7 @@
     <div class="error" th:if="${error}" th:text="${error}"></div>
     <div class="success" th:if="${success}" th:text="${success}"></div>
 
-    <form th:action="@{/profile/save}" th:object="${userProfileDTO}" method="post" class="profile-form">
+    <form id="profile-form" class="profile-form"  th:action="@{/profile/save}" th:object="${userProfileDTO}" method="post">
         <div class="section">
             <div class="divider"></div>
 
@@ -66,6 +66,7 @@
                     <label>День рождения</label>
                     <input type="date" th:field="*{birthday}">
                 </div>
+
                 <div class="field-group">
                     <label>Дата создания</label>
                     <input type="text"
@@ -76,22 +77,22 @@
         </div>
 
         <div class="divider"></div>
-
-        <div class="actions-container">
-            <a th:href="@{/tasks}" class="back-btn">⬅ Назад</a>
-
-            <div class="right-buttons">
-                <form th:action="@{/profile/delete}" method="post"
-                      onsubmit="return confirm('Вы уверены, что хотите удалить аккаунт? Это действие необратимо.')"
-                      style="display: inline-block; margin: 0;">
-                    <button type="submit" class="delete-btn">Удалить профиль</button>
-                </form>
-
-                <button type="submit" class="save-btn">Сохранить</button>
-            </div>
-        </div>
     </form>
 
+
+    <div class="actions-container">
+        <a th:href="@{/tasks}" class="back-btn">⬅ Назад</a>
+
+        <div class="right-buttons">
+            <form th:action="@{/profile/delete}" method="post" style="display: inline-block; margin: 0;"
+                  onsubmit="return confirm('Вы уверены, что хотите удалить аккаунт? Это действие необратимо.')">
+
+                <button type="submit" class="delete-btn">Удалить профиль</button>
+            </form>
+
+            <button type="submit" form="profile-form" class="save-btn">Сохранить</button>
+        </div>
+    </div>
 
 </div>
 
