--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -44,7 +44,7 @@
 
             <form th:action="@{'/tasks/toggle/' + ${task.id}}" method="post" class="checkbox-form">
                 <label class="custom-checkbox">
-                    <input type="checkbox" th:checked="${task.completed}">
+                    <input type="checkbox" th:checked="${task.completed}" onchange="this.form.submit()">
                     <span class="checkmark"></span>
                 </label>
             </form>
@@ -64,10 +64,20 @@
 
             <div class="task-actions">
 
-                <a th:href="@{'/tasks/edit/' + ${task.id}}" class="btn btn-edit" onclick="openEditModal()">✎</a>
+                <a th:href="@{'/tasks/edit/' + ${task.id}}" class="btn btn-edit" onclick="openEditModal()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#808080" class="bi bi-pencil" viewBox="0 0 16 16">
+                        <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                    </svg>
+                </a>
 
-                <form th:action="@{'/tasks/delete/' + ${task.id}}" method="post">
-                    <button class="btn btn-delete" type="submit">🗑️</button>
+                <form th:action="@{'/tasks/delete/' + ${task.id}}" method="post"
+                      onsubmit="return confirm('Вы уверены, что хотите удалить задачу? Это действие необратимо.')">
+                    <button class="btn btn-delete" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                        </svg>
+                    </button>
                 </form>
 
             </div>
@@ -82,7 +92,7 @@
 
             <h2>Новая задача</h2>
 
-            <form th:action="@{/tasks/create}" th:object="${taskDTO}" method="post" class="input-group">
+            <form th:action="@{/tasks/create}" th:object="${taskAddDTO}" method="post" class="input-group">
 
                 <label>Название</label>
                 <input type="text" th:field="*{title}" placeholder="Введите название" required>
@@ -107,7 +117,7 @@
             <span class="closeModal" onclick="closeEditModal()">×</span>
             <h2>Редактировать задачу</h2>
 
-            <form th:action="@{'/tasks/edit/' + ${taskId}}" th:object="${taskUpdateDTO}" method="post" class="input-group">
+            <form id = "editTaskFrom" th:action="@{'/tasks/edit/' + ${taskId}}" th:object="${taskUpdateDTO}" method="post" class="input-group">
 
                 <label>Название</label>
                 <input type="text" th:field="*{title}" placeholder="Введите название" required>
@@ -121,15 +131,21 @@
 
                 <label>Дедлайн</label>
                 <input type="datetime-local" th:field="*{deadline}">
-
-                <div class="checkbox-groupe">
-                    <label>
-                        <input type="checkbox" th:field="*{completed}"> Выполнено
-                    </label>
-                </div>
-
-                <button type="submit" class="btn btn-save">Сохранить изменения</button>
             </form>
+
+            <div class="actions-buttons">
+                <form th:action="@{'/tasks/delete/' + ${taskId}}" method="post"
+                      onsubmit="return confirm('Вы уверены, что хотите удалить задачу? Это действие необратимо.')">
+                    <button class="btn btn-delete" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                        </svg>
+                    </button>
+                </form>
+
+                <button type="submit" form="editTaskFrom" class="btn btn-save">Сохранить изменения</button>
+            </div>
         </div>
     </div>
 
